--- a/style.css
+++ b/style.css
@@ -7,14 +7,14 @@ h3 {
 }
 
 h1 {
-    font-size: 18px;
-    line-height: 28px;
-    color: #333;
+    font-size: 64px;
+    line-height: 68px;
+    margin: 0;
 }
 
 h2 {
     font-size: 46px;
-    line-height: 68px;
+    line-height: 50px;
     margin: 0;
 }
 
